Closed
Bug 228545
Opened 22 years ago
Closed 21 years ago
Bug "FilterWith..." in universal charset detector
Categories
(Core :: Internationalization, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: vladimir, Assigned: vladimir)
References
Details
(Keywords: fixed-aviary1.0, fixed1.7.5)
Attachments
(2 files)
|
578 bytes,
patch
|
smontagu
:
review+
roc
:
superreview+
mkaply
:
approval1.7.5+
|
Details | Diff | Splinter Review |
|
57 bytes,
text/plain
|
Details |
User-Agent: Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.0) Opera 7.23 [en]
Build Identifier:
Two bugz nsSBCSGroupProber.cpp
1. In FilterWithoutEnglishLetters need to be added (Line 133) after loop
if (meetMSB && curPtr > prevPtr)
while (prevPtr < curPtr) *newptr++ = *prevPtr++;
To keep last word in text chunk
2. Same bugfix for FilterWithEnglishLetters (Line 173) after loop
if (curPtr > prevPtr && !isInTag) //current segment contains more than just a
symbol
// and it is not inside a tag, keep it
while (prevPtr < curPtr) *newptr++ = *prevPtr++;
Reproducible: Always
Steps to Reproduce:
1. Try single non english word like ???????? (one word) - You'll lose it in
FilterWithoutEnglishLetters
2. Try single english word - it will be losed in FilterWithEnglishLetters
Attachment #151520 -
Flags: review?(smontagu)
FilterWithoutEnglishLetters loose last word
(потеряно) in first line
FilterWithEnglishLetters loose last word (lostword) in second line
Attachment #151520 -
Flags: superreview?(roc)
Comment 3•21 years ago
|
||
Comment on attachment 151520 [details] [diff] [review]
patch for 228545 bug
r=smontagu
Attachment #151520 -
Flags: review?(smontagu) → review+
Attachment #151520 -
Flags: superreview?(roc) → superreview+
Attachment #151520 -
Flags: approval1.7.1?
Comment 4•21 years ago
|
||
Can you attach a -u patch for this one so that someone can check it in for you
and I can look at it better?
(In reply to comment #4)
> Can you attach a -u patch for this one so that someone can check it in for you
> and I can look at it better?
With pleasure but tomorrow. My fast inet and fixed version in office :-(
mozilla/extensions/universalchardet/src/nsSBCSGroupProber.cpp 1.11
mkaply:
http://tinderbox.mozilla.org/bonsai/multidiff.cgi?allchanges=timeless%
mozdev.org|mozilla/extensions/universalchardet/src|nsSBCSGroupProber.cpp|1.11,&c
vsroot=/cvsroot
Comment 7•21 years ago
|
||
Comment on attachment 151520 [details] [diff] [review]
patch for 228545 bug
a=mkaply for 1.7.1
Attachment #151520 -
Flags: approval1.7.1? → approval1.7.1+
mozilla/extensions/universalchardet/src/nsSBCSGroupProber.cpp 1.9.14.1
Keywords: fixed1.7.1
Comment 9•21 years ago
|
||
| Assignee | ||
Comment 10•21 years ago
|
||
Thanx to everybody for help in application of this patch
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Keywords: fixed-aviary1.0
You need to log in
before you can comment on or make changes to this bug.
Description
•