Bug 228545 Bug "FilterWith..." in universal charset detector patch by vladimir@lukianov.name r=smontagu sr=roc